# umfpack-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs
examples/: example.c  example1.c  example1.rs  example2.c  example2.rs  example3.rs  example4.c  example4.rs
src/: blas.rs  complex.rs  control.rs  di.rs  info.rs  lib.rs  main.rs  numeric.rs  prelude.rs  symbolic.rs  sys.rs  zi.rs
