[package]
name = "umfpack"
version = "0.0.0"
edition = "2021"
authors = ["Floris Laporte <floris.laporte@gmail.com>"]
license-file = "LICENSE"

[lib]
name = "umfpack"
crate-type = ["lib", "cdylib"]

[features]
s3-sync = ["cc", "rusoto_s3", "rusoto_core", "tokio", "rayon"]
blas = ["cc"]
openblas = ["cc"]
blas-static = ["cc"]
openblas-static = ["cc"]
default = ["cc"]

[build-dependencies]
cfg-if = "1.0.0"
rayon = {version="1.6.1", optional=true}
rusoto_s3 = { version="0.48.0", optional=true }
rusoto_core = { version="0.48.0", optional=true }
tokio = { version="1.25.0", optional=true }
cc = { version="1.0.79", features=["parallel"], optional=true }

[dependencies]
approx = "0.5.1"
array-init = "2.1.0"
cfg-if = "1.0.0"
libc = "0.2.139"
