[package]
name = "umfpack"
version = "0.0.0"
edition = "2021"
authors = ["Floris Laporte <floris.laporte@gmail.com>"]
license-file = "LICENSE"

[lib]
name = "umfpack"
crate-type = ["lib", "cdylib"]

[features]
default = ["cc"]

[build-dependencies]
git2 = "0.16.1"
cc = { version="1.0.79", features=["parallel"], optional=true }

[dependencies]
approx = "0.5.1"
array-init = "2.1.0"
libc = "0.2.139"
num-complex = "0.4.3"
