[package]
name = "umfpack-rs"
version = "0.0.1"
edition = "2021"
authors = ["Floris Laporte <floris.laporte@gmail.com>"]
readme = "README.md"
license = " LGPL-2.1-only"
description = "Some UMFPACK bindings for rust"
documentation = "https://github.com/flaport/umfpack-rs"
homepage = "https://github.com/flaport/umfpack-rs"
repository = "https://github.com/flaport/umfpack-rs"

[lib]
name = "umfpack"
crate-type = ["lib", "cdylib"]

[features]
default = ["cc"]

[build-dependencies]
git2 = "0.18.0"
cc = { version="1.0.83", features=["parallel"], optional=true }

[dependencies]
approx = "0.5.1"
array-init = "2.1.0"
libc = "0.2.147"
num-complex = "0.4.4"
